plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'raisetech'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //Apache Commons Lang
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //MySQL Connector/J(JDBCドライバ)
    runtimeOnly 'com.mysql:mysql-connector-j'

    //MyBatis Spring Boot Starter
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'

    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

    // SpringBoot test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // MyBatis test
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'

    // H2(inMemoryDB)
    testImplementation 'com.h2database:h2:2.2.224'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
